--- a/base/devfile.yaml
+++ b/base/devfile.yaml
@@ -20,7 +20,10 @@ components:
         - exposure: public
           name: 'webserver'
           targetPort: 3000
-
+      env:
+        - name: SMTP_HOST
+          value: 
+        
     
        
  
