--- a/base/devfile.yaml
+++ b/base/devfile.yaml
@@ -20,9 +20,9 @@ components:
         - exposure: public
           name: 'webserver'
           targetPort: 3000
-      env:
-        - name: SMTP_HOST
-          value: ' '
+      #env:
+      #  - name: SMTP_HOST
+      #    value: ' '
         
     
        
